--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "bootstrap-icons": "^1.9.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "listening-on": "^2.0.9"
+    "listening-on": "^2.0.9",
+    "pg": "^8.8.0",
+    "socket.io": "^4.5.3"
   },
   "name": "teckyproject2",
   "description": "",
@@ -16,7 +19,7 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "start":"ts-node-dev login.ts",
+    "start": "ts-node-dev login.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
