--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "@types/pg": "^8.6.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "start": "ts-node-dev login.ts",
+    "start": "ts-node-dev server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
