--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "listening-on": "^2.0.9",
     "pg": "^8.8.0",
     "socket.io": "^4.5.3"
@@ -14,6 +15,7 @@
   "main": "login.js",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/node": "^18.11.9",
     "@types/pg": "^8.6.5",
     "ts-node": "^10.9.1",
