--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap-icons": "^1.9.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
