--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
