--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express-session": "^1.17.3",
     "listening-on": "^2.0.9",
     "pg": "^8.8.0",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "sweetalert2": "^11.6.7"
   },
   "name": "teckyproject2",
   "description": "",
