--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/uuid": "^8.3.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.1",
@@ -11,7 +12,8 @@
     "listening-on": "^2.0.9",
     "pg": "^8.8.0",
     "socket.io": "^4.5.3",
-    "sweetalert2": "^11.6.7"
+    "sweetalert2": "^11.6.7",
+    "uuid": "^9.0.0"
   },
   "name": "teckyproject2",
   "description": "",
