--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "bootstrap-icons": "^1.10.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "listening-on": "^2.0.9",
+    "nodejs-nodemailer-outlook": "^1.2.4",
+    "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "socket.io": "^4.5.3",
     "sweetalert2": "^11.6.7"
@@ -20,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/pg": "^8.6.5",
     "ts-node": "^10.9.1",
