--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "jsx": "react",
         "esModuleInterop":true,
         "moduleResolution": "node",
-        "noImplicitReturns": true,
+        "noImplicitReturns": false,
         "noImplicitThis": true,
         "noImplicitAny": true,
         "strictNullChecks": true,
