--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/formidable": "^2.0.5",
     "@types/uuid": "^8.3.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.2",
@@ -10,6 +11,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "listening-on": "^2.0.9",
     "nodejs-nodemailer-outlook": "^1.2.4",
