--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "escape-html": "^1.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "formidable": "^2.0.1",
+    "html-escaper": "^3.0.3",
     "jsonwebtoken": "^8.5.1",
     "listening-on": "^2.0.9",
     "nodejs-nodemailer-outlook": "^1.2.4",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
+    "@types/html-escaper": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/pg": "^8.6.5",
